--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -5,8 +5,8 @@
         tools:showIn="@layout/item_note_roll">
 
     <data>
-        <import alias="v" type="android.view.View"/>
-        <import alias="noteType" type="sgtmelon.scriptum.model.key.NoteType"/>
+        <import type="android.view.View"/>
+        <import alias="Type" type="sgtmelon.scriptum.model.key.NoteType"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
     </data>
@@ -24,8 +24,8 @@
                 android:id="@+id/note_info_progress_text"
                 style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
-                android:text='@{noteItem.type == noteType.ROLL ? noteItem.text : ""}'
-                android:visibility='@{noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
+                android:text='@{noteItem.type == Type.ROLL ? noteItem.text : ""}'
+                android:visibility='@{noteItem.type == Type.ROLL ?  View.VISIBLE : View.GONE}'
                 tools:text="@string/preview_note_done"
                 tools:visibility="visible"/>
 
@@ -35,14 +35,14 @@
                 android:orientation="horizontal"
                 android:showDividers="middle"
                 android:divider="@drawable/div_space_small"
-                android:visibility="@{noteItem.haveAlarm() || noteItem.status || noteItem.haveRank() ? v.VISIBLE : v.GONE}"
+                android:visibility="@{noteItem.haveAlarm() || noteItem.status || noteItem.haveRank() ? View.VISIBLE : View.GONE}"
                 tools:visibility="visible">
 
             <ImageView
                     android:id="@+id/note_info_notification_image"
                     style="@style/Image.Note.Info"
                     android:contentDescription="@null"
-                    android:visibility='@{noteItem.haveAlarm() ? v.VISIBLE : v.GONE }'
+                    android:visibility='@{noteItem.haveAlarm() ? View.VISIBLE : View.GONE }'
                     app:srcCompat="@drawable/ic_notifications"
                     tools:visibility="visible"/>
 
@@ -50,8 +50,8 @@
                     android:id="@+id/note_info_bind_image"
                     style="@style/Image.Note.Info"
                     android:contentDescription="@null"
-                    android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
-                    android:visibility='@{noteItem.status ? v.VISIBLE : v.GONE}'
+                    android:src='@{noteItem.type == Type.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                    android:visibility='@{noteItem.status ? View.VISIBLE : View.GONE}'
                     tools:srcCompat="@drawable/ic_bind_roll"
                     tools:visibility="visible"/>
 
@@ -59,7 +59,7 @@
                     android:id="@+id/note_info_rank_image"
                     style="@style/Image.Note.Info"
                     android:contentDescription="@null"
-                    android:visibility='@{noteItem.haveRank() ? v.VISIBLE : v.GONE}'
+                    android:visibility='@{noteItem.haveRank() ? View.VISIBLE : View.GONE}'
                     app:srcCompat="@drawable/ic_rank"
                     tools:visibility="visible"/>
 
