--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -6,8 +6,8 @@
 
     <data>
         <import type="sgtmelon.scriptum.R"/>
-        <import alias="v" type="android.view.View"/>
-        <import alias="noteType" type="sgtmelon.scriptum.model.key.NoteType"/>
+        <import type="android.view.View"/>
+        <import alias="Type" type="sgtmelon.scriptum.model.key.NoteType"/>
 
         <variable name="menuCallback" type="sgtmelon.scriptum.screen.ui.callback.note.INoteMenu"/>
         <variable name="dataLoad" type="boolean"/>
@@ -41,7 +41,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:visibility='@{dataLoad &amp;&amp; !editMode &amp;&amp; noteItem.bin ? v.VISIBLE : v.INVISIBLE}'
+                    android:visibility='@{dataLoad &amp;&amp; !editMode &amp;&amp; noteItem.bin ? View.VISIBLE : View.INVISIBLE}'
                     tools:visibility="invisible">
 
                 <ImageButton
@@ -75,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:visibility='@{dataLoad &amp;&amp; editMode &amp;&amp; !noteItem.bin ? v.VISIBLE : v.INVISIBLE}'
+                    android:visibility='@{dataLoad &amp;&amp; editMode &amp;&amp; !noteItem.bin ? View.VISIBLE : View.INVISIBLE}'
                     tools:visibility="invisible">
 
                 <ImageButton
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:visibility='@{dataLoad &amp;&amp; !editMode &amp;&amp; !noteItem.bin ? v.VISIBLE  : v.INVISIBLE}'
+                    android:visibility='@{dataLoad &amp;&amp; !editMode &amp;&amp; !noteItem.bin ? View.VISIBLE  : View.INVISIBLE}'
                     tools:visibility="visible">
 
                 <ImageButton
@@ -161,7 +161,7 @@
                         style="@style/Button.Small"
                         android:contentDescription='@{noteItem.status ? @string/menu_note_status_bind : @string/menu_note_status_unbind}'
                         android:onClick='@{() -> menuCallback.onMenuBind()}'
-                        android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
+                        android:src='@{noteItem.type == Type.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                         app:boolExpression='@{noteItem.status}'
                         app:falseColor='@{R.attr.clContent}'
                         app:trueColor='@{R.attr.clAccent}'
