--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -9,7 +9,7 @@
         <import type="android.view.View"/>
         <import type="sgtmelon.scriptum.model.annotation.Theme"/>
 
-        <variable name="currentTheme" type="int"/>
+        <variable name="theme" type="int"/>
         <variable name="dataLoad" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
@@ -71,14 +71,14 @@
         <View
                 android:id="@+id/toolbar_note_color_view"
                 style="@style/Image.Color.Horizontal"
-                app:visibleTheme='@{currentTheme}'
+                app:visibleTheme='@{theme}'
                 app:visibleOn='@{Theme.DARK}'
                 tools:background="@color/note_red_dark"
                 tools:visibility="gone"/>
 
         <View
                 style="@style/Divider.Horizontal"
-                app:visibleTheme='@{currentTheme}'
+                app:visibleTheme='@{theme}'
                 app:visibleOn='@{Theme.LIGHT}'/>
 
     </com.google.android.material.appbar.AppBarLayout>
