--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -6,10 +6,10 @@
 
     <data>
         <import type="sgtmelon.scriptum.R"/>
-        <import alias="v" type="android.view.View"/>
-        <import alias="theme" type="sgtmelon.scriptum.model.annotation.Theme"/>
+        <import type="android.view.View"/>
+        <import type="sgtmelon.scriptum.model.annotation.Theme"/>
 
-        <variable name="currentTheme" type="int"/>
+        <variable name="theme" type="int"/>
         <variable name="dataLoad" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
@@ -37,7 +37,7 @@
                     style="@style/Container.ToolbarNote.Scroll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility='@{dataLoad ? v.VISIBLE : v.INVISIBLE}'>
+                    android:visibility='@{dataLoad ? View.VISIBLE : View.INVISIBLE}'>
 
                 <FrameLayout
                         android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
                             android:hint="@string/hint_enter_name"
                             android:importantForAutofill="noExcludeDescendants"
                             android:text='@={noteItem.name}'
-                            android:visibility='@{editMode ? v.VISIBLE : v.INVISIBLE}'
+                            android:visibility='@{editMode ? View.VISIBLE : View.INVISIBLE}'
                             tools:targetApi="o"
                             tools:visibility="invisible"/>
 
@@ -60,7 +60,7 @@
                             style="@style/Text.ToolbarNote"
                             android:hint="@string/hint_text_name"
                             android:text='@{editMode ? "" : noteItem.name}'
-                            android:visibility='@{!editMode ? v.VISIBLE : v.INVISIBLE}'
+                            android:visibility='@{!editMode ? View.VISIBLE : View.INVISIBLE}'
                             tools:text="@string/preview_note_name"/>
 
                 </FrameLayout>
@@ -72,8 +72,8 @@
         <View
                 android:id="@+id/toolbar_note_color_view"
                 style="@style/Image.Color.Horizontal"
-                app:visibleTheme='@{currentTheme}'
-                app:visibleOn='@{theme.DARK}'
+                app:visibleTheme='@{theme}'
+                app:visibleOn='@{Theme.DARK}'
                 tools:background="@color/note_red_dark"
                 tools:visibility="visible"/>
 
