--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -4,8 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable name="theme" type="int"/>
         <variable name="item" type="sgtmelon.scriptum.model.item.NotificationItem"/>
-        <variable name="currentTheme" type="int"/>
     </data>
 
     <androidx.cardview.widget.CardView
@@ -29,7 +29,7 @@
                     android:id="@+id/notification_color_view"
                     style="@style/Image.Color.Vertical.Start"
                     android:contentDescription="@null"
-                    app:indicatorTheme='@{currentTheme}'
+                    app:indicatorTheme='@{theme}'
                     app:indicatorColor='@{item.note.color}'
                     tools:visibility="visible"/>
 
